# more-cuts

./: CHANGELOG.md  LICENSE  README.md  more-cuts.cabal
app/: Main.hs
src/: MoreCuts.hs
