cabal-version:       2.4
name:                more-cuts
version:             0.0.0.0
synopsis:            concidental video cutter
description:
    concidental video cutter.
    See [README.md](https://github.com/eehah5ru/more-cuts#more-cuts) for more details.
homepage:            https://github.com/eehah5ru/more-cuts
bug-reports:         https://github.com/eehah5ru/more-cuts/issues
license:             MIT
license-file:        LICENSE
author:              eehah5ru
maintainer:          eehah5ru <nicola.spesivcev@gmail.com>
copyright:           2021 eehah5ru
category:            art
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/eehah5ru/more-cuts.git

common common-options
  build-depends:       base ^>= 4.14.3.0
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     MoreCuts

executable more-cuts
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       more-cuts
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
